--- a/package.json
+++ b/package.json
@@ -20,16 +20,21 @@
     "url": "git+https://github.com/CacheM0ney/reactopt.git"
   },
   "scripts": {
-    "reactopt": "node main.js"
+    "reactopt": "babel-node main.js"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
     "chalk": "2.3.0",
     "fs": "0.0.1-security",
     "lodash": "^4.13.1",
     "lodash-webpack-plugin": "^0.8.1",
     "puppeteer": "^0.12.0",
     "react": "^15.0 || 0.14.x",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "webpack": "^3.8.1"
   },
   "engines": {
     "node": ">=4.2.4"
