--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "chalk": "2.3.0",
+    "chrome-launcher": "^0.8.1",
     "fs": "0.0.1-security",
     "lodash": "^4.13.1",
     "lodash-webpack-plugin": "^0.8.1",
