--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactopt",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "React performance optimization CLI",
   "homepage": "https://github.com/react/reactopt#readme",
   "bugs": {
@@ -23,21 +23,21 @@
     "reactopt": "babel-node main.js"
   },
   "devDependencies": {
+  },
+  "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "chalk": "2.3.0",
+    "chalk-animation": "^1.3.0",
+    "chrome-launcher": "^0.8.1",
     "fs": "0.0.1-security",
     "lodash": "^4.13.1",
     "lodash-webpack-plugin": "^0.8.1",
     "react": "^15.0 || 0.14.x",
     "react-dom": "^16.0.0",
     "webpack": "^3.8.1"
-  },
-  "dependencies": {
-    "chalk-animation": "^1.3.0",
-    "chrome-launcher": "^0.8.1"
   },
   "engines": {
     "node": ">=4.2.4"
