--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactopt",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "React performance optimization CLI",
   "homepage": "https://github.com/react/reactopt#readme",
   "bugs": {
@@ -38,6 +38,10 @@
     "react": "^15.0 || 0.14.x",
     "react-dom": "^16.0.0",
     "webpack": "^3.8.1"
+  },
+  "peerDependencies": {
+    "chalk": "2.3.0",
+    "chalk-animation": "^1.3.0"
   },
   "engines": {
     "node": ">=4.2.4"
