--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "babel-preset-es2015": "^6.24.1",
     "chalk": "2.3.0",
     "chalk-animation": "^1.3.0",
-    "chrome-launcher": "^0.8.1",
     "lodash": "^4.13.1",
     "lodash-webpack-plugin": "^0.8.1",
+    "puppeteer": "^0.12.0",
     "react": "^15.0 || 0.14.x",
     "react-dom": "^16.0.0",
     "webpack": "^3.8.1"
