add console-png dependency

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-es2015": "^6.24.1",
     "chalk": "2.3.0",
     "chalk-animation": "^1.3.0",
+    "console-png": "1.2.1",
     "lodash": "^4.13.1",
     "lodash-webpack-plugin": "^0.8.1",
     "puppeteer": "^0.12.0",
@@ -45,6 +46,7 @@
     "babel-preset-es2015": "^6.24.1",
     "chalk": "2.3.0",
     "chalk-animation": "^1.3.0",
+    "console-png": "1.2.1",
     "chrome-launcher": "^0.8.1",
     "lodash": "^4.13.1",
     "lodash-webpack-plugin": "^0.8.1",
