--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "reactopt",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "React performance optimization CLI",
-  "homepage": "https://github.com/react/reactopt#readme",
+  "homepage": "https://github.com/reactopt/reactopt#readme",
   "bugs": {
-    "url": "https://github.com/react/reactopt/issues",
+    "url": "https://github.com/reactopt/reactopt/issues",
     "email": "reactopt@gmail.com"
   },
   "license": "MIT",
@@ -17,7 +17,7 @@
   "main": "main.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/react/reactopt.git"
+    "url": "git+https://github.com/reactopt/reactopt.git"
   },
   "scripts": {
     "reactopt": "babel-node main.js"
@@ -47,9 +47,9 @@
     "chalk": "2.3.0",
     "chalk-animation": "^1.3.0",
     "console-png": "1.2.1",
-    "chrome-launcher": "^0.8.1",
     "lodash": "^4.13.1",
     "lodash-webpack-plugin": "^0.8.1",
+    "puppeteer": "^0.12.0",
     "react": "^15.0 || 0.14.x",
     "react-dom": "^16.0.0",
     "webpack": "^3.8.1"
