--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "express": "^4.16.2",
+    "expect": "^21.2.1",
     "mocha": "^4.0.1"
   },
   "dependencies": {
@@ -35,7 +35,7 @@
     "babel-preset-es2015": "^6.24.1",
     "chalk": "2.3.0",
     "chalk-animation": "^1.3.0",
-    "console-png": "1.2.1",
+    "console-png": "^1.2.1",
     "lodash": "^4.13.1",
     "lodash-webpack-plugin": "^0.8.1",
     "puppeteer": "^0.12.0",
