--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "expect": "^21.2.1",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "sinon": "^4.1.2",
+    "sinon-chai": "^2.14.0"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
